[package]
name = "sqlcipher-front"
version = "1.0.0"
description = "sqlite数据库开发工具，支持ruqlite绑定的sqlcipher库。"
authors = ["t1000ln"]
license = "MIT"
repository = "https://github.com/t1000ln/sqlcipher-front"
edition = "2021"
rust-version = "1.57"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "^1.2", features = ["dialog-all", "shell-open"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.16.0"
toml = "^0.6"
api-resp = "^0.1.3"
log = "0.4"
fast_log = "1.5"
rbs = { version = "0.1" }
rbatis = { version = "4.0" }
rbdc = "0.1.22"
rbdc-sqlite = { version = "0.1" }
regex = "^1"
lazy-regex = "^2.3"
rusqlite = { version = "0.28.0", features = ["functions", "collation", "bundled-sqlcipher-vendored-openssl"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
rand = "0.8.5"
names = { version = "0.14.0", default-features = false }
