[package]
name = "support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.16.0"
toml = "0.5.9"
api-resp = "0.1.2"
log = "0.4"
fast_log = "1.5"
rbs = { version = "0.1" }
rbatis = { version = "4.0" }
rbdc = "0.1.22"
rbdc-sqlite = { version = "0.1" }
regex = "1.7"
